added multi-downloading and goodbye prism launcher

--- a/src/XboxCsMgr.Client/XboxCsMgr.Client.csproj
+++ b/src/XboxCsMgr.Client/XboxCsMgr.Client.csproj
@@ -8,6 +8,7 @@
     <ApplicationIcon>xboxcloudicon.ico</ApplicationIcon>
     <BaseIntermediateOutputPath>..\..\build\XboxCsMgr.Client\</BaseIntermediateOutputPath>
     <BaseOutputPath>..\..\bin\</BaseOutputPath>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
